Fix: Layout issues

--- a/src/style.scss
+++ b/src/style.scss
@@ -122,7 +122,7 @@ button {
   
   @include md {
     justify-content: start;
-    padding: 2rem 2.5rem;
+    padding: 1.25rem 2.5rem;
   }
 
   .navigation {
@@ -341,6 +341,7 @@ button {
       order: initial;
       text-align: left;
       padding: 0;
+      padding-top: 6.5rem;
     }
   }
 
